--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,8 @@
-/* add CSS class and element and selectors here */
+ body {
+      background-color: lightblue;
+      font-size: 120%;
+}
+ .myClass {
+      background-color: gray;
+      color: darkblue
+}
